評価機能の実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,3 +15,10 @@ ja:
       messages:
         too_short: "%{count}文字以上で入力してください"
         confirmation: "と%{attribute}の入力が一致しません"
+  evaluation_points:
+    melody: "メロディ"
+    lyrics: "歌詞"
+    chord: "コード"
+    beat: "ビート"
+    sound: "サウンド"
+    atmosphere: "雰囲気"
