プロフィール編集の国際化修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,17 @@
 ja:
   activerecord:
     attributes:
+      user:
+        name: "ユーザー名"
+        email: "メールアドレス"
+    errors:
+      models:
+        user:
+          attributes:
+            name:
+              blank: "を入力してください"
+            email:
+              blank: "を入力してください"
       song:
         genre: "ジャンル"
         focus_point: "こだわりポイント"
